tests/ui/coherence/super-traits/super-trait-knowable-2.stderr
error[E0119]: conflicting implementations of trait `TensorCompare<_>` for type `Tensor`
  --> $DIR/super-trait-knowable-2.rs:21:1
   |
LL |   impl<T2> TensorCompare<T2> for Tensor {}
   |   ------------------------------------- first implementation here
LL | / impl<T1, T2> TensorCompare<T2> for T1
LL | |
LL | | where
LL | |     T1: TensorOp<T2>,
LL | |     T1::Unmasked: Sized,
   | |________________________^ conflicting implementation for `Tensor`
   |
   = note: downstream crates may implement trait `TensorOp<_>` for type `Tensor`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
